--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "type": "git",
     "url": "https://github.com/murkenmedia/nassco"
   },
-  "dependencies": {},
+  "dependencies": {
+    "lodash.template": "^4.5.0"
+  },
   "devDependencies": {
     "autoprefixer": "^9.6.1",
     "cssnano": "^4.1.10",
